# pcegs

./: .gitignore  CMakeLists.txt  README.md
dataset/: complex.md
dataset/Yeast/DAG/: ancestors.txt  gene-expression.txt  go-slim.txt  go_term.txt  is_a.txt  is_a_child_ancestor.txt  part_of.txt  part_of_child_ancestor.txt  protein-go.txt  subcellular1.txt
dataset/Yeast/PPI/: Collins.txt  Original_dip.txt  Original_krogan.txt  a.out  biogrid.txt  gavin_w.txt  krogan_core.txt  krogan_extended.txt  mip.txt  ppi.txt  yeast_all.txt
dataset/Yeast/PPI/xgmml/: collins.xgmml  gavin.xgmml  krogan_core.xgmml  krogan_extented.xgmml
dataset/Yeast/complex/: CYC2008.txt  a.out  cyc_2008.txt  main.cpp  my_complex.txt
dataset/Yeast/temp/: original_MIPS.txt
include/: .clang-format  config.h  dag.h  evaluate.h  gene_express.h  graph.h  p_value.h  utils.h
src/: .clang-format  no_dag.cpp  no_dynamic.cpp  no_essential.cpp
src/lib/: a.out  dag.cpp  evaluate.cpp  gene_express.cpp  graph.cpp  p_value.cpp  utils.cpp
